small fix to scrollbar

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -244,3 +244,14 @@ legend
   text-align: right
   display: block
   color: black
+
+\::-webkit-scrollbar
+  width: 0.5em
+
+\::-webkit-scrollbar-track
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0)
+  border-radius: 0px
+
+\::-webkit-scrollbar-thumb
+  border-radius: 0px
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0)
